# tictactoe

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
cli/: cli.py
flaskapp/: app.py
flaskapp/templates/: admin.html  base.html  dashboard.html  index.html  live_feed.html  login.html  register.html  submit_project.html
tournament/: Dockerfile  Makefile  app.py
tournament/bots/bot_c/: bot  config.toml
tournament/bots/bot_cpp/: bot
tournament/bots/bot_java/: bot  config.toml
tournament/bots/bot_js/: config.toml
tournament/bots/bot_lisp/: config.toml
tournament/bots/bot_lua/: config.toml
tournament/bots/bot_py/: config.toml
tournament/bots/bot_rs/: bot  config.toml
tournament/bots/bot_sh/: config.toml
tournament/bots/cbot/: README.md
tournament/bots/cbot1/: bot  config.toml
tournament/drivers/: TicTacToeAI.rs
tournament/example_submission/: README.md  bot.py  config.toml
tournament/src/game/: __init__.py  board.py  bot.py  game_manager.py  sentry.py  tournament.py  tournament_manager.py  utils.py
